# metaldb

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
derive/: Cargo.toml  README.md
derive/src/: db_traits.rs  lib.rs
metaldb/: Cargo.toml
metaldb/benches/: lib.rs
metaldb/benches/benchmarks/: encoding.rs  mod.rs  schema_patterns.rs  storage.rs
metaldb/examples/: manual_migration.rs  migration_with_helper.rs  migration_with_iter_loop.rs
metaldb/examples/migration/: mod.rs
metaldb/src/: db.rs  error.rs  generic.rs  keys.rs  lazy.rs  lib.rs  macros.rs  migration.rs  options.rs  validation.rs  values.rs
metaldb/src/access/: extensions.rs  mod.rs
metaldb/src/backends/: mod.rs  rocksdb.rs  temporarydb.rs
metaldb/src/indexes/: entry.rs  group.rs  iter.rs  key_set.rs  list.rs  map.rs  mod.rs  sparse_list.rs
metaldb/src/migration/: persistent_iter.rs
metaldb/src/views/: address.rs  metadata.rs  mod.rs  tests.rs
metaldb/tests/: backup.rs  checkpoints.rs  components.rs  iter.rs  list.rs  map.rs  migration.rs  persistent_iter.rs  set.rs
metaldb/tests/common/: mod.rs
metaldb/tests/key/: mod.rs
metaldb/tests/work/: mod.rs
