[package]
name = "metaldb"
version = "1.0.0"
edition = "2018"
authors = ["Oleg Nosov <olegnosov1@gmail.com>", "Igor Aleksanov <popzxc@yandex.ru>", "The Exonum Team <contact@exonum.com>"]
repository = "https://github.com/olegnn/metaldb"
documentation = "https://docs.rs/metaldb"
readme = "../README.md"
license = "Apache-2.0"

keywords = ["database"]
categories = ["database", "data-structures"]
description = "Persistent storage implementation based on RocksDB."

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
chrono = "0.4.6"
crossbeam = "0.8.0"
rocksdb = { git = "https://github.com/olegnn/rust-rocksdb", rev = "672449c", default-features = false }
rust_decimal = "1.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.6"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
metaldb-derive = { version = "1.0.0", path = "../derive" }

assert_matches = "1.3"
bincode = "1.3"
criterion = "0.3"
modifier = "0.1"
proptest = "1.0"
pretty_assertions = "0.7"
rand = "0.8"
rand_xorshift = "0.3.0"
url = "2.0"
tempfile = "3.2"

[[bench]]
name = "criterion"
path = "benches/lib.rs"
harness = false

[features]
default = ["rocksdb_snappy"]
with-serde = []

# Compression options passed to RocksDB backend.
rocksdb_snappy = ["rocksdb/snappy"]
rocksdb_lz4 = ["rocksdb/lz4"]
rocksdb_zlib = ["rocksdb/zlib"]
rocksdb_zstd = ["rocksdb/zstd"]
rocksdb_bzip2 = ["rocksdb/bzip2"]

# Enables long benchmarks; does not influence main crate code.
long_benchmarks = []
